syntax = "proto3";

package playAudio;

// The RobotStatus service definition.
service PlayAudioService {
    // Sends a greeting
    rpc ControlTheLifter (PlayAudioRequest) returns (PlayAudioReply) {}
}

// The request message containing the tag for the server to log, not to query.
message PlayAudioRequest {
    string audioName = 1;
}

// The response message containing the last RobotStatus, datetime, and errorMesage if any.
message PlayAudioReply {
    string errorMessage = 1;
}

//protoc -I grpc/ grpc/pa.proto --go_out=plugins=grpc:grpc/
